--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "Atlas-dots"]
+[submodule "manifests/Atlas-dots"]
 	path = manifests/Atlas-dots
 	url = https://github.com/EE-Atlas/Atlas-dots
+	branch = main
