--- a/manifests/hyprpolkitagent/main.yaml
+++ b/manifests/hyprpolkitagent/main.yaml
@@ -1,5 +1,5 @@
 actions:
-  - procedure: paru.install
+  - procedure: aur.install
     info: "Installing hyprpolkitagent"
     package: ["hyprpolkitagent"]
 
