--- a/manifests/services/vpn.yaml
+++ b/manifests/services/vpn.yaml
@@ -1,4 +1,4 @@
 actions:
-  - procedure: paru.install
-    info: "Installing throne"
+  - procedure: aur.install
+    info: Installing throne
     package: ["throne-bin"]
