Add actual hyprland conf

--- a/manifests/hyprland/files/hypratlas/configs/environment.conf
+++ b/manifests/hyprland/files/hypratlas/configs/environment.conf
@@ -9,3 +9,8 @@ env = MOZ_ENABLE_WAYLAND,1
 env = SDL_VIDEODRIVER,wayland
 env = XDG_SESSION_TYPE,wayland
 env = CLUTTER_BACKEND,wayland
+
+env = MONITORS_PATH,$dotfiles/monitors.conf
+env = hypr,.
+env = WALLPAPERS_DIR,~/.config/hyprpaper/wallpapers
+env = hyprpath,.
