--- a/manifests/dolphin/main.yaml
+++ b/manifests/dolphin/main.yaml
@@ -1,7 +1,7 @@
 actions:
   - procedure: aur.install
     info: Installing dolphin file manager with plugins
-    package:
+    packages:
       - dolphin
       - dolphin-plugins
       - kio-admin
