--- a/manifests/fuzzel/main.yaml
+++ b/manifests/fuzzel/main.yaml
@@ -1,7 +1,7 @@
 actions:
   - procedure: aur.install
     info: Installing fuzzel
-    package: ["fuzzel"]
+    packages: ["fuzzel"]
 
   - procedure: os.symlink
     info: Creating fuzzel configuration symlink
