--- a/manifests/hyprland/main.yaml
+++ b/manifests/hyprland/main.yaml
@@ -1,7 +1,7 @@
 actions:
   - procedure: aur.install
     info: Installing hyprland
-    package: ["hyprland-git"]
+    packages: ["hyprland-git"]
 
   - procedure: os.symlink
     info: Creating symlink for hyprland config
