--- a/manifests/hyprpolkitagent/main.yaml
+++ b/manifests/hyprpolkitagent/main.yaml
@@ -1,7 +1,7 @@
 actions:
   - procedure: aur.install
     info: "Installing hyprpolkitagent"
-    package: ["hyprpolkitagent"]
+    packages: ["hyprpolkitagent"]
 
   - procedure: shell.run
     info: "Changing shell for user"
