--- a/manifests/services/bluetooth.yaml
+++ b/manifests/services/bluetooth.yaml
@@ -1,7 +1,7 @@
 actions:
   - procedure: aur.install
     info: Installing bluez
-    package:
+    packages:
       - bluez
       - bluez-utils
       - blueman
