--- a/manifests/services/brightnessctl.yaml
+++ b/manifests/services/brightnessctl.yaml
@@ -1,4 +1,4 @@
 actions:
   - procedure: aur.install
     info: Installing brightnessctl
-    package: ["brightnessctl"]
+    packages: ["brightnessctl"]
