--- a/manifests/services/network.yaml
+++ b/manifests/services/network.yaml
@@ -1,7 +1,7 @@
 actions:
   - procedure: paru.install
     info: "Installing nm-connection-editor"
-    package:
+    packages:
       - nm-connection-editor
 
   - procedure: shell.run
