--- a/manifests/services/sound.yaml
+++ b/manifests/services/sound.yaml
@@ -1,7 +1,7 @@
 actions:
   - procedure: aur.install
     info: Installing pipewire
-    package:
+    packages:
       - pipewire
       - pipewire-pulse
       - pavucontrol
