--- a/manifests/waybar/main.yaml
+++ b/manifests/waybar/main.yaml
@@ -1,7 +1,7 @@
 actions:
   - procedure: aur.install
     info: Installing waybar
-    package: ["waybar"]
+    packages: ["waybar"]
 
   - procedure: os.symlink
     info: Creating waybar config symlink
