--- a/manifests/services/network.yaml
+++ b/manifests/services/network.yaml
@@ -1,5 +1,5 @@
 actions:
-  - procedure: paru.install
+  - procedure: aur.install
     info: "Installing nm-connection-editor"
     packages:
       - nm-connection-editor
