Update lock screen

--- a/manifests/hyprland/files/hyprland.conf
+++ b/manifests/hyprland/files/hyprland.conf
@@ -24,6 +24,7 @@ env = MOZ_ENABLE_WAYLAND,1
 env = SDL_VIDEODRIVER,wayland
 env = XDG_SESSION_TYPE,wayland
 env = CLUTTER_BACKEND,wayland
+env = WALLPAPERS_DIR,~/.config/hypr/wallpapers
 
 # =========
 # Programs
