--- a/manifests/hyprpaper/files/hyprpaper.conf
+++ b/manifests/hyprpaper/files/hyprpaper.conf
@@ -1,1 +1,5 @@
-wallpaper = monitor, $WALLPAPERS_DIR/Shinobu.jpg
+wallpaper {
+    monitor =
+    path = $WALLPAPERS_DIR/landscape_night.jpg
+    fit_mode = cover
+}
