--- a/manifests/hyprland/files/hyprland.conf
+++ b/manifests/hyprland/files/hyprland.conf
@@ -7,7 +7,7 @@ source = ~/.config/hypr/monitors.conf
 # Autostart
 # ==========
 exec-once = waybar
-exec-once = waypaper --restore
+exec-once = hyprpaper
 exec-once = hypridle
 
 # ============
